--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -104,38 +104,30 @@ jobs:
       #     flags: cypress-e2e-coverage
       #     token: ${{ secrets.CODECOV_TOKEN }}
 
-  # This is just a copy of the above with 2 additional args for visual testing
+  cypress-ct-test:
+    # ran out of parallelization
+    # strategy:
+    #   matrix:
+    #     machines: [1, 2] # increase to 2 later: [1, 2]
+    needs: [install-dependencies]
+    runs-on: ubuntu-latest
+    container: cypress/included:10.3.1 # save time on not having to install cypress
+    steps:
+      - uses: actions/checkout@v3
 
-  # cypress-ct-test:
-  #   # ran out of parallelization
-  #   # strategy:
-  #   #   matrix:
-  #   #     machines: [1, 2] # increase to 2 later: [1, 2]
-  #   needs: [install-dependencies]
-  #   runs-on: ubuntu-latest
-  #   container: cypress/included:10.3.1 # save time on not having to install cypress
-  #   steps:
-  #     - uses: actions/checkout@v3
+      - uses: bahmutov/npm-install@v1.8.17 # save time on dependencies
+        with: {useRollingCache: true}
 
-  #     - uses: bahmutov/npm-install@v1.8.17 # save time on dependencies
-  #       with: {useRollingCache: true}
-
-  #     - name: Cypress component tests 🧪
-  #       uses: cypress-io/github-action@v4.2.0
-  #       with:
-  #         # we have already installed everything
-  #         install: false
-  #         component: true
-  #         browser: chrome
-  #       env:
-  #         # CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
-  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  #     # - name: Copy the coverage to coverage-part (Coverage_step2)
-  #     # Same as the e2e job, but for component tests.
-  #     # run: (mkdir coverage-part || true) && cp coverage-cy/coverage-final.json coverage-part/$GITHUB_JOB-$GITHUB_RUN_ID.json
-  #     # test short name
-  #     # run: (mkdir coverage-part || true) && cp coverage-cy/coverage-final.json coverage-part/coverage-final-ct.json
+      - name: Cypress component tests 🧪
+        uses: cypress-io/github-action@v4.2.0
+        with:
+          # we have already installed everything
+          install: false
+          component: true
+          browser: chrome
+        env:
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   #     - name: Upload artifacts (Coverage_step3)
   #       uses: actions/upload-artifact@v3.1.0
