--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "cy:install": "cypress install",
     "cy:run": "cypress run",
     "cy:open": "cypress open",
-    "cy:open-e2e": "cypress open --e2e --browser chrome",
+    "cy:open-e2e": "server-test 3000 'cypress open --e2e --browser chrome'",
     "cy:open-ct": "cypress open --component --browser chrome",
     "cy:run-ct": "cypress run --component --browser chrome",
     "test:e2e": "start-server-and-test start:cli http://localhost:3000/list cy:open",
