--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "cross-env": "^7.0.3",
     "cypress": "^10.3.0",
     "cypress-hmr-restarter": "^2.0.3",
+    "cypress-real-events": "^1.7.1",
     "eslint-plugin-cypress": "^2.12.1",
     "husky": "4.3.8",
     "inquirer": "^9.0.0",
