--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "npm": ">=6"
   },
   "dependencies": {
-    "@emotion/core": "10.3.1",
-    "@emotion/styled": "10.3.0",
+    "@emotion/react": "11.10.0",
+    "@emotion/styled": "11.10.0",
     "@reach/dialog": "0.17.0",
     "@reach/menu-button": "0.17.0",
     "@reach/tabs": "0.17.0",
