--- a/package.json
+++ b/package.json
@@ -37,13 +37,17 @@
     "stop-runaway-react-effects": "2.0.0"
   },
   "devDependencies": {
-    "@babel/preset-react": "7.18.6",
+    "@babel/preset-env": "^7.18.10",
+    "@babel/preset-react": "^7.18.6",
+    "@bahmutov/cypress-code-coverage": "^1.3.2",
+    "@cypress/instrument-cra": "^1.4.0",
     "@testing-library/cypress": "8.0.3",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.3.0",
     "@testing-library/user-event": "14.4.2",
     "@types/react": "18.0.16",
     "@types/react-dom": "18.0.6",
+    "babel-loader": "^8.2.5",
     "cross-env": "7.0.3",
     "cypress": "10.4.0",
     "cypress-hmr-restarter": "2.0.3",
@@ -53,10 +57,12 @@
     "inquirer": "9.1.0",
     "is-ci": "3.0.1",
     "is-ci-cli": "2.2.0",
+    "istanbul-lib-coverage": "^3.2.0",
     "jest": "27.5.1",
     "jest-watch-typeahead": "2.0.0",
     "node-match-path": "0.6.3",
     "npm-run-all": "4.1.5",
+    "nyc": "^15.1.0",
     "prettier": "2.7.1",
     "react-test-renderer": "18.2.0",
     "resolve": "1.22.1",
@@ -65,8 +71,7 @@
     "whatwg-fetch": "3.6.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "start:cli": "cross-env BROWSER=none react-scripts start",
+    "start": "react-scripts -r @cypress/instrument-cra start",
     "build": "react-scripts build --profile",
     "test": "is-ci-cli \"test:coverage\" \"test:watch\"",
     "test:watch": "jest --watch",
@@ -86,7 +91,12 @@
     "format": "prettier --write \"**/*.+(js|json|css|md|mdx|html)\"",
     "setup": "node setup",
     "validate-exercises": "node ./scripts/validate-exercises",
-    "validate": "npm run validate-exercises && npm-run-all --parallel lint test:coverage build"
+    "validate": "npm run validate-exercises && npm-run-all --parallel lint test:coverage build",
+    "cov:combined": "yarn copy:reports && yarn combine:reports && yarn finalize:combined-report",
+    "copy:reports": "(mkdir reports || true) && cp coverage-cy/coverage-final.json reports/from-cypress.json && cp coverage/coverage-final.json reports/from-jest.json",
+    "combine:reports": "(mkdir .nyc_output || true) && yarn nyc merge reports && mv coverage.json .nyc_output/out.json",
+    "finalize:combined-report": "yarn nyc report --reporter html --reporter text --reporter json-summary --report-dir combined-coverage",
+    "cov:reset": "rm -rf .nyc_output && rm -rf reports && rm -rf coverage && rm -rf coverage-cy && rm -rf combined-coverage"
   },
   "babel": {
     "presets": [
