--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,11 @@
 
 # testing
 /coverage*
+/combined-coverage
+.nyc_output/out.json
+.nyc_output/
+cypress/screenshots
 /cypress/videos
-/cypress/screenshots
 
 # production
 /build
@@ -31,3 +34,4 @@ public/extra-*
 ignored/
 .eslintcache
 combined-coverage
+.nyc_output
