--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -107,10 +107,9 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
 
   cypress-ct-test:
-    # ran out of parallelization
-    # strategy:
-    #   matrix:
-    #     machines: [1, 2] # increase to 2 later: [1, 2]
+    strategy:
+      matrix:
+        machines: [1, 2]
     needs: [install-dependencies]
     runs-on: ubuntu-latest
     container: cypress/included:10.4.0 # save time on not having to install cypress
