--- a/codecov.yml
+++ b/codecov.yml
@@ -9,7 +9,8 @@ coverage:
   # makes it so that unit, cy ct and cy e2e reports finish running before the report is shown in a PAR
   # https://docs.codecov.com/docs/notifications#preventing-notifications-until-after-n-builds
   notify:
-    after_n_builds: 3
+    after_n_builds: 10
+    wait_for_ci: true
   ignore:
     # you can copy the files & folders from nyc to here
     # the format is the same
