--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -109,7 +109,7 @@ jobs:
   cypress-ct-test:
     strategy:
       matrix:
-        machines: [1, 2, 3]
+        machines: [1, 2, 3f]
     needs: [install-dependencies]
     runs-on: ubuntu-latest
     container: cypress/included:10.4.0 # save time on not having to install cypress
