--- a/codecov.yml
+++ b/codecov.yml
@@ -8,9 +8,8 @@ coverage:
         threshold: 2%
   # makes it so that unit, cy ct and cy e2e reports finish running before the report is shown in a PAR
   # https://docs.codecov.com/docs/notifications#preventing-notifications-until-after-n-builds
-  notify:
-    after_n_builds: 10
-    wait_for_ci: true
   ignore:
     # you can copy the files & folders from nyc to here
     # the format is the same
+notify:
+  after_n_builds: 5 # 3 CT parallel, 1 unit, 1 e2e
