--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "cross-env": "7.0.3",
     "cypress": "10.4.0",
     "cypress-hmr-restarter": "2.0.3",
+    "cypress-localstorage-commands": "^2.2.0",
     "cypress-real-events": "1.7.1",
     "eslint-plugin-cypress": "2.12.1",
     "husky": "4.3.8",
