--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,10 +18,10 @@ jobs:
           cache: 'npm'
           node-version: 16.10.0
 
-      - uses: bahmutov/npm-install@v1.8.23
-        with: {useRollingCache: true} # recommended for large projects
-        env:
-          CYPRESS_INSTALL_BINARY: 0 # no need to install the Cypress binary, we are already using the docker image in the e2e job
+      - name: Install dependencies
+        uses: cypress-io/github-action@v4.2.0
+        with:
+          runTests: false
 
   unit-test:
     needs: [install-dependencies]
@@ -29,10 +29,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: bahmutov/npm-install@v1.8.23
-        with: {useRollingCache: true}
-        env:
-          CYPRESS_INSTALL_BINARY: 0
+      - name: Install dependencies
+        uses: cypress-io/github-action@v4.2.0
+        with:
+          runTests: false
       - name: unit-test
         run: npm test
 
@@ -56,10 +56,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: bahmutov/npm-install@v1.8.23
-        with: {useRollingCache: true}
-        env:
-          CYPRESS_INSTALL_BINARY: 0
+      - name: Install dependencies
+        uses: cypress-io/github-action@v4.2.0
+        with:
+          runTests: false
       - name: lint
         run: npm run lint
 
@@ -70,17 +70,12 @@ jobs:
     #     machines: [1, 2]
     needs: [install-dependencies]
     runs-on: ubuntu-latest
-    container: cypress/included:10.4.0 # save time on not having to install cypress
     steps:
       - uses: actions/checkout@v3
-
-      - uses: bahmutov/npm-install@v1.8.23 # save time on dependencies
-        with: {useRollingCache: true}
 
       - name: Cypress e2e tests 🧪
         uses: cypress-io/github-action@v4.2.0
         with:
-          install: false # no need to install because of the above 2
           start: npm start
           wait-on: 'http://localhost:3000'
           browser: chrome
@@ -112,18 +107,13 @@ jobs:
         machines: [1, 2, 3f]
     needs: [install-dependencies]
     runs-on: ubuntu-latest
-    container: cypress/included:10.4.0 # save time on not having to install cypress
     steps:
       - uses: actions/checkout@v3
-
-      - uses: bahmutov/npm-install@v1.8.23 # save time on dependencies
-        with: {useRollingCache: true}
 
       - name: Cypress component tests 🧪
         uses: cypress-io/github-action@v4.2.0
         with:
           # we have already installed everything
-          install: false
           component: true
           browser: chrome
           record: true
